infra/k8s/back-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-depl
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: juanbevilacqua/patient-list-backend:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: service-account-volume
              mountPath: /app/secrets # Path in the container
              readOnly: true
      volumes:
        - name: service-account-volume
          secret:
            secretName: service-account
---
# Path: infra/k8s/backend-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-srv
spec:
  selector:
    app: backend
  ports:
    - name: backend
      protocol: TCP
      port: 5000 # Port that the service will listen on
      targetPort: 5000 # Port that the service will forward to
