infra/k8s/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: patient-list-ingress
#   namespace: default
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#     - host: myapp.local
#       http:
#         paths:
#           - path: /api
#             pathType: Prefix
#             backend:
#               service:
#                 name: backend-srv
#                 port:
#                   number: 5000

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: patient-list-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: myapp.local
      http:
        paths:
          - path: /api # Match /api and anything after it
            pathType: Prefix
            backend:
              service:
                name: backend-srv
                port:
                  number: 5000
          - path: / # Match /frontend and anything after it
            pathType: Prefix
            backend:
              service:
                name: front-srv
                port:
                  number: 3000
